Fix horizontal align with image/icon in list

--- a/src/definitions/elements/list.less
+++ b/src/definitions/elements/list.less
@@ -105,10 +105,6 @@ ol.ui.list ol,
   vertical-align: @iconContentVerticalAlign;
   transition: @iconTransition;
 }
-.ui.list .list > .item i[class*="top aligned"].icon,
-.ui.list > .item > i[class*="top aligned"].icon {
-  vertical-align: top;
-}
 .ui.list .list > .item > i.icon:only-child,
 .ui.list > .item > i.icon:only-child {
   display: inline-block;
@@ -124,10 +120,6 @@ ol.ui.list ol,
   margin: 0em;
   padding-right: @imageDistance;
   vertical-align: @imageAlign;
-}
-.ui.list .list > .item > [class*="top aligned"].image,
-.ui.list > .item > [class*="top aligned"].image {
-  vertical-align: top;
 }
 .ui.list .list > .item > .image img,
 .ui.list > .item > .image img {
@@ -158,10 +150,6 @@ ol.ui.list ol,
 .ui.list .list > .item > img.image + .content,
 .ui.list > .item > img.image + .content {
   display: inline-block;
-}
-.ui.list .list > .item [class*="top aligned"].content,
-.ui.list > .item > [class*="top aligned"].content {
-  vertical-align: top;
 }
 .ui.list .list > .item > .content > .list,
 .ui.list > .item > .content > .list {
@@ -280,6 +268,15 @@ ol.ui.list ol,
   padding-bottom: 0em;
 }
 
+.ui.horizontal.list > .item > .image,
+.ui.horizontal.list .list > .item > .image,
+.ui.horizontal.list > .item > .icon,
+.ui.horizontal.list .list > .item > .icon,
+.ui.horizontal.list > .item > .content,
+.ui.horizontal.list .list > .item > .content {
+  vertical-align: @horizontalVerticalAlign;
+}
+
 /* Padding on all elements */
 .ui.horizontal.list > .item:first-child,
 .ui.horizontal.list > .item:last-child {
@@ -367,6 +364,23 @@ ol.ui.list ol,
 }
 .ui.inverted.list .item a:not(.ui):hover {
   color: @invertedItemLinkHoverColor !important;
+}
+
+/*-------------------
+       Aligned
+--------------------*/
+
+.ui.list[class*="top aligned"],
+.ui.list [class*="top aligned"] {
+  vertical-align: top;
+}
+.ui.list[class*="middle aligned"],
+.ui.list [class*="middle aligned"] {
+  vertical-align: middle;
+}
+.ui.list[class*="bottom aligned"],
+.ui.list [class*="bottom aligned"] {
+  vertical-align: bottom;
 }
 
 /*-------------------
